Fix Choice of Bonus products quantity is not displayed on IE11

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/cart.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/cart.scss
@@ -269,6 +269,7 @@ $negative-spacer: -0.625rem;
 
 .quantity {
     width: 100%;
+    min-width: 5em;
 }
 
 .bundle-misc {
